--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 
 /design
 
+/node-modules
+
 # Avoid accidental XD upload if you convert the design file
 ###############################################
 ## Please do not remove line 12 - thanks! 🙂 ##
